@@ -344,23 +344,23 @@ This is free software: you are free to change and redistribute it.
 There is NO WARRANTY, to the extent permitted by law.
 .\"
 .SH SEE ALSO
-.BR capabilities (7)
-.BR cc (1)
-.BR credentials (7)
-.BR date (1)
-.BR env (1)
-.BR exec (P)
-.BR getconf (1)
-.BR groups (1)
-.BR kill (1)
-.BR ldd (1)
-.BR locale (1)
-.BR ls (1)
-.BR mount (1)
-.BR proc (5)
-.BR ps (1)
-.BR sh (1)
-.BR stat (1)
-.BR stty (1)
-.BR umask (P)
+.BR capabilities (7) "" ,
+.BR cc (1) "" ,
+.BR credentials (7) "" ,
+.BR date (1) "" ,
+.BR env (1) "" ,
+.BR exec (P) "" ,
+.BR getconf (1) "" ,
+.BR groups (1) "" ,
+.BR kill (1) "" ,
+.BR ldd (1) "" ,
+.BR locale (1) "" ,
+.BR ls (1) "" ,
+.BR mount (1) "" ,
+.BR proc (5) "" ,
+.BR ps (1) "" ,
+.BR sh (1) "" ,
+.BR stat (1) "" ,
+.BR stty (1) "" ,
+.BR umask (P) "" ,
 .BR uname (1)
