@@ -1,3 +1,15 @@
+2012-12-06  James Hunt  <james.hunt@ubuntu.com>
+
+	* TODO: Updated with a couple of ideas.
+	* man/procenv.1: Formatting of "SEE ALSO" section.
+
+	[ Dave Love <fx@gnu.org> ]
+	* src/procenv.c:
+	  - locale_map:
+	    - Guard non-POSIX locale categories for portability.
+	    - Remove LC_ALL.
+	  - show_locale(): Special-case handling for LC_ALL.
+
 2012-12-02  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c:
